[project]
name = "mthds"
version = "0.0.1"
description = "Methods are an open standard for creating and sharing AI methods."
authors = [{ name = "Evotis S.A.S.", email = "oss@pipelex.com" }]
maintainers = [{ name = "Pipelex", email = "oss@pipelex.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<3.15"

dependencies = []

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.6.14",
    "mkdocs-meta-manager>=1.1.0",
    "mike>=2.1.3",
]

[project.urls]
Homepage = "https://mthds.ai"
Repository = "https://github.com/mthds-ai/mthds"

[tool.uv]
required-version = ">=0.7.2"
